--- a/ng-app/src/app/app.component.html
+++ b/ng-app/src/app/app.component.html
@@ -5,10 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>APP</title>
+  <title>TodoList</title>
 </head>
 
 <body>
+
+  <app-create-todo-modal *ngIf="modal" [projects]="projects"
+                         (onAddNewTodo)="drawProjectList()"
+                         (hideModal)="modal = false">
+  </app-create-todo-modal>
+
   <mat-toolbar color="primary">
     <span class="toolbar_title">{{title}}</span>
     <span class="example-spacer"></span>
@@ -17,9 +23,16 @@
     </button>
   </mat-toolbar>
 
+  <mat-card class="error" *ngIf="error">
+    <h1>При выполнении запроса произошла ошибка!</h1>
+    <p class="error_text">{{error}}</p>
+  </mat-card>
+
   <main *ngIf="projects.length > 0; else loading">
     <app-projects *ngFor="let project of projects"
                   [project]="project"></app-projects>
+
+
   </main>
   <ng-template #loading>
     <main>
@@ -28,7 +41,9 @@
   </ng-template>
 
 
-  <app-create-todo-modal *ngIf="modal" [projects]="projects" (hideModal)="modal = false"></app-create-todo-modal>
+
+
+
 </body>
 
 </html>
