--- a/ng-app/src/app/components/create-todo-modal/create-todo-modal.component.scss
+++ b/ng-app/src/app/components/create-todo-modal/create-todo-modal.component.scss
@@ -5,6 +5,7 @@
   right: 0;
   left: 0;
   background: rgb(0, 0, 0, 0.6);
+  z-index: 1;
 }
 
 .modal-wrapper {
@@ -13,6 +14,7 @@
   left: 50%;
   top: 15%;
   transform: translate(-50%, 0);
+  z-index: 2;
 
   & form {
     padding: 5px 25px 20px;
@@ -20,10 +22,11 @@
 
   & .modal_title {
     text-align: center;
+    font-weight: bold;
     min-width: 375px;
     padding: 15px 10px;
     text-transform: uppercase;
-    border-bottom: 1px solid #ccc; // Todo scss variables
+    border-bottom: 1px solid #ccc;
   }
 
   & .mat-form-field {
