update errors handle logic and disable form send button wnen it submit

--- a/ng-app/src/app/app.component.html
+++ b/ng-app/src/app/app.component.html
@@ -12,7 +12,8 @@
 
   <app-create-todo-modal *ngIf="modal" [projects]="projects"
                          (onAddNewTodo)="drawProjectList()"
-                         (hideModal)="modal = false">
+                         (hideModal)="modal = false"
+                         (onError)="errorsHandle($event)">
   </app-create-todo-modal>
 
   <mat-toolbar color="primary">
@@ -30,7 +31,8 @@
 
   <main *ngIf="projects.length > 0; else loading">
     <app-projects *ngFor="let project of projects"
-                  [project]="project"></app-projects>
+                  [project]="project"
+                  (onError)="errorsHandle($event)"></app-projects>
 
 
   </main>
