--- a/ng-app/src/app/components/create-todo-modal/create-todo-modal.component.html
+++ b/ng-app/src/app/components/create-todo-modal/create-todo-modal.component.html
@@ -33,7 +33,8 @@
 
     <fieldset>
       <button mat-raised-button (click)=" hideModal.emit()" type="button">Отмена</button>
-      <button mat-raised-button color="primary" type="submit" [disabled]="createTodoform.invalid">OK</button>
+      <button mat-raised-button color="primary" type="submit"
+              [disabled]="createTodoform.invalid || submitted">OK</button>
     </fieldset>
   </form>
 </div>
